--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            gap: 30px; /* Increased space between images and text */
         }
         .title-container img {
-            width: 100px; /* Adjust width as needed */
+            width: 200px; /* Increased width for larger images */
             height: auto;
-            margin: 0 20px; /* Space between images and the title */
         }
         .title-container h1 {
             font-size: 4em;
@@ -109,7 +109,7 @@
                 font-size: 3em;
             }
             .title-container img {
-                width: 80px; /* Adjust width for smaller screens */
+                width: 150px; /* Adjust width for smaller screens */
             }
             .container p {
                 font-size: 1.25em;
@@ -125,7 +125,7 @@
                 font-size: 2.5em;
             }
             .title-container img {
-                width: 60px; /* Adjust width for smaller screens */
+                width: 120px; /* Adjust width for smaller screens */
             }
             .container p {
                 font-size: 1.1em;
@@ -150,7 +150,7 @@
                     <a href="#history">WHAT'S AP-GAINED</a>
                     <a href="#mission">OUR GOAL</a>
                     <a href="#team">OUR STRATEGY </a>
-					<a href="#mission">WHO WE ARE?</a>
+                    <a href="#mission">WHO WE ARE?</a>
                 </div>
             </div>
             <a href="#news">NEWS & UPDATES</a>
@@ -163,10 +163,12 @@
     <div class="container">
         <div class="title-container">
             <img src="data/3.png" alt="Left Image"> <!-- Replace with your left image -->
-            <h1>AP-GAINED</h1>
+            <div>
+                <h1>AP-GAINED</h1>
+                <p>Asia Pacific - Generative AI Integration for<br> National Research & Education Network (NREN)<br> Enhancement & Development</p>
+            </div>
             <img src="data/3.png" alt="Right Image"> <!-- Replace with your right image -->
         </div>
-        <p>Asia Pacific - Generative AI Integration for<br> National Research & Education Network (NREN)<br> Enhancement & Development</p>
     </div>
 
     <script>
